--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://votelectric.github.io/project
+url: https://votelectric.github.io
+root: /
 permalink: :year/:month/:day/:id/
 permalink_defaults:
 pretty_urls:
